@@ -1,0 +1,5 @@
+
+.*:     file format .*
+
+Contents of section \.text:
+ 100000b0 3d22effe 39297f4a .*
